# test-credentials

./: .gitignore  README.md  pyproject.toml
src/: test_github.py  test_github.sh
